--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
+@font-face {
+  font-family: 'Montserrat';
+  src: url(../src/assets/font/Montserrat/Montserrat-VariableFont_wght.ttf);
+}
+
+#root {
+  width: 100%;
+  height: 100%;
+}
+
 body {
   margin: 0;
-  font-family: 'Montserrat', sans-serif;
+  font-family: Montserrat, sans-serif;
   background-color: #FFFCF5;
+  width: 100%;
 }
 
 code {
