--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,10 @@
   src: url(../src/assets/font/Montserrat/Montserrat-VariableFont_wght.ttf);
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 #root {
   width: 100%;
   height: 100%;
